--- a/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Localization/en.lproj/Localizable.strings
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Localization/en.lproj/Localizable.strings
@@ -10,3 +10,6 @@
 "tab_setting" = "Setting";
 
 "welcome_text" = "Hello! Nice to meet you";
+
+"writing_diary" = "Writing A Diary";
+"save_button" = "SAVE";
