--- a/TIL/day24-211101.md
+++ b/TIL/day24-211101.md
@@ -67,7 +67,7 @@
 
 #### 2. Localization.strings
 
-​	① `Strings File` 을 생성하는데 이름은 **Localizable.strings** (다른 이름으로도 변경 가능)
+​	① `Strings File` 을 생성하는데 이름은 **Localizable.strings** (다른 이름으로도 변경 가능, tableName 설정하지 않으려면 이 이름으로)
 
 ​	② 인스펙터에서 다른 언어들을 추가해준 후 각 언어 파일에 필요한 string들을 적어준다
 
@@ -81,8 +81,10 @@ welcomeLabel.text = NSLocalizedString("welcome_text", comment: "")
 backupRestoreLabel.text = NSLocalizedString("data_backup", tableName: "Setting", bundle: .main, value: "", comment: "")
 ```
 
+<br>
+
 <details>
-    <summary>string을 참지 못할 경우 추가작업</summary>
+    <summary>"string"을 용납할 수 없는 경우 추가작업</summary>
 
 * `String+Extensions` 파일을 만들어준 뒤 함수를 만든다
 
@@ -111,7 +113,14 @@ backupRestoreLabel.text = NSLocalizedString("data_backup", tableName: "Setting",
     }
     ```
 
-    
+* 사용하기
+
+  ```swift
+  welcomeLabel.text = LocalizableStrings.welcome_text.localized      
+  backupRestoreLabel.text = LocalizableStrings.data_backup.localizedSetting
+  ```
+
+  
 
 </details>
 
